# cram_demo

./: .gitignore  README.md  stack.xml
bullet_reasoning_demo/launch/: bullet_reasoning.launch
controller_toolchain_experiments/: CMakeLists.txt  controller-toolchain-experiments.asd  package.xml  ros-msg-conversions.asd
controller_toolchain_experiments/roslisp-interfaces/: message-conversion.lisp  package.lisp  roslisp-interfaces.asd
controller_toolchain_experiments/roslisp-msg-conversions/: package.lisp  roslisp-msg-conversions.asd  sensor-msgs.lisp  std-msgs.lisp
controller_toolchain_experiments/roslisp-streamer/: package.lisp  roslisp-streamer.asd  roslisp-streamer.lisp
controller_toolchain_experiments/serapeum/: description-interface.lisp  function-composition.lisp  hash-table-description.lisp  package.lisp  serapeum.asd
controller_toolchain_experiments/src/: controller-toolchain-experiments.asd  description-interface.lisp  descriptions.lisp  experimental-code.lisp  function-composition.lisp  hash-table-descriptions.lisp  instantiate-descriptions.lisp  package.lisp  pr2-fingertip-sensors.lisp  sensor-msgs.lisp  std-msgs.lisp
controller_toolchain_experiments/src/ros-msg-conversions/: conversion-interface.lisp  package.lisp  std-msgs.lisp  streaming-interface.lisp
cram_pr2_executive/src/experiments/pick-and-place-data/: pick-and-place-data.asd
cram_pr2_fccl_demo/: CMakeLists.txt  cram-pr2-fccl-demo.asd  package.xml
cram_pr2_fccl_demo/src/: controller-manager.lisp  controllers.lisp  designators.lisp  knowrob-utils.lisp  package.lisp  parameters.lisp  plans.lisp  pouring-plans.lisp  ros-setup.lisp  samples.lisp  tf.lisp
cram_pr2_fccl_tutorials/: CMakeLists.txt  cram-pr2-fccl-tutorials.asd  manifest.xml  package.xml
cram_pr2_fccl_tutorials/asdf/: cram-pr2-fccl-tutorials.asd
cram_pr2_fccl_tutorials/src/: package.lisp  pouring-plans.lisp
cram_saphari_review_year2/: CMakeLists.txt  cram-saphari-review-2.asd  cram-saphari-review-year2.asd  package.xml
cram_saphari_review_year2/scripts/: publish-dummy-human.py
cram_saphari_review_year2/src/: demo-plans.lisp  human-perception.lisp  motion-utils.lisp  package.lisp  plan-lib.lisp  reasoning.lisp  robot-configuration.lisp  ros-misc.lisp  sandbox.lisp  tf.lisp  tool-perception.lisp
cram_saphari_review_year2/src2/: direction.lisp  fluents.lisp  msg-parser.lisp  package.lisp  util.lisp  visualization.lisp
