<package>
  <name>controller_toolchain_experiments</name>
  <version>0.0.0</version>
  <description>
    A playground to experiment with semantic descriptions
    of controller toolchains. 
  </description>

  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/cram-code/cram_demo/issues</url>
  <url type="repository">https://github.com/cram-code/cram_demo</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sbcl</build_depend>
  <build_depend>cl_robot_controllers</build_depend>

  <run_depend>sbcl</run_depend>
  <run_depend>cl_robot_controllers</run_depend>
</package>