<package>
  <name>cram_pr2_fccl_demo</name>
  <version>0.1.0</version>
  <description>
    Holds some sample plans and functionality for using the fccl controllers on the
    PR2 from CRAM.
  </description>
 
  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>
  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>sbcl</build_depend>

  <run_depend>sbcl</run_depend>
</package>
