<package>
  <name>cram_pr2_fccl_demo</name>
  <version>0.1.0</version>
  <description>
    Demo package using FCCL controllers from CRAM.
  </description>
 
  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>
  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>sbcl</build_depend>
  <build_depend>roslisp</build_depend>
  <build_depend>json_prolog</build_depend>
  <build_depend>cram_utilities</build_depend>
  <build_depend>cram_language</build_depend>
  <build_depend>cl_feature_constraints</build_depend>
  <build_depend>cram_fccl</build_depend>
  <build_depend>cram_pr2_controllers</build_depend>
  <build_depend>cl_robot_models</build_depend>

  <run_depend>sbcl</run_depend>
  <run_depend>roslisp</run_depend>
  <run_depend>json_prolog</run_depend>
  <run_depend>cram_utilities</run_depend>
  <run_depend>cram_language</run_depend>
  <run_depend>cl_feature_constraints</run_depend>
  <run_depend>cram_fccl</run_depend>
  <run_depend>cram_pr2_controllers</run_depend>
  <run_depend>cl_robot_models</run_depend>
</package>