<?xml version="1.0"?>
<package>
  <name>cram_saphari_review_year2</name>
  <version>0.1.0</version>
  <description>
    Holds the demo-related CRAM code (plans, executive) for the year 2
    review of EU project SAPHARI, year.
  </description>
  
  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>
  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cram_language</build_depend>
  <build_depend>cram_designators</build_depend>
  <build_depend>cram_process_modules</build_depend>
  <build_depend>boxy_manipulation_process_module</build_depend>

  <run_depend>cram_language</run_depend>
  <run_depend>cram_designators</run_depend>
  <run_depend>cram_process_modules</run_depend>
  <run_depend>boxy_manipulation_process_module</run_depend>
</package>