<?xml version="1.0"?>
<package>
  <name>cram_saphari_review_year2</name>
  <version>0.1.0</version>
  <description>
    Holds the demo-related CRAM code (plans, executive) for the year 2
    review of EU project SAPHARI, year.
  </description>
  
  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>
  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cram_language</build_depend>
  <build_depend>cram_reasoning</build_depend>
  <build_depend>cram_designators</build_depend>
  <build_depend>cram_beasty</build_depend>
  <build_depend>roslisp</build_depend>
  <build_depend>roslisp_utilities</build_depend>
  <build_depend>saphari_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>cl_human_shapes</build_depend>
  <build_depend>cl_3d_shapes</build_depend>
  <build_depend>cl_transforms</build_depend>

  <run_depend>cram_language</run_depend>
  <run_depend>cram_reasoning</run_depend>
  <run_depend>cram_designators</run_depend>
  <run_depend>cram_beasty</run_depend>
  <run_depend>roslisp</run_depend>
  <run_depend>roslisp_utilities</run_depend>
  <run_depend>saphari_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>cl_human_shapes</run_depend>
  <run_depend>cl_3d_shapes</run_depend>
  <run_depend>cl_transforms</run_depend>

</package>
